--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.16",
+    "aos": "^2.3.4",
+    "axios": "^1.8.4",
     "firebase": "^11.5.0",
+    "framer-motion": "^12.6.2",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.1",
     "match-sorter": "^8.0.0",
+    "moment": "^2.30.1",
+    "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.17.2",
