--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^7.4.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.17.2",
-    "tailwindcss": "^4.0.16"
+    "tailwindcss": "^4.0.16",
+    "yet-another-react-lightbox": "^3.21.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
